# amazon-luggage-intelligence

./: .gitignore  README.md
backend/: .env.example  ai_engine.py  main.py  pyproject.toml
backend/tests/: test_main.py
data/: luggage_data.json  scraped_luggage.json  scraped_products.csv  scraped_reviews.csv
frontend/: build_errors.txt  package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.css  index.css  main.tsx
scraper/: amazon_scraper.py  pyproject.toml
